clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20041112_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20041112-1.c" (c, x86_64-unknown-linux-gnu)
global global : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn foo(%arg0: s32i) -> void* [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %26 = alloca s32i, "p", align 4
        %27 = alloca void*, "__retval", align 8
        store %arg0, %26
        scope {
                %31 = load %26 : s32i, align 4
                %32 = const 0 : s32i
                cmp
                if %33 {
                        %34 = get_global @global : s32i*
                        %35 = load %34 : s32i, align 4
                        inc
                        store %36, %34, align 4
                        %37 = get_global @global : s32i*
                        %38 = cast(bitcast) %37 : void*
                        store %38, %27
                        %39 = load %27 : void*
                        return %39
                }
                yield
        }
        %28 = const 18446744073709551615 : u64i
        %29 = cast(int_to_ptr) %28 : void*
        store %29, %27
        %30 = load %27 : void*
        return %30
}
fn bar() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %10 = alloca s32i, "__retval", align 4
        %11 = alloca void*, "p", align 8
        %12 = get_global @global : s32i*
        %13 = load %12 : s32i, align 4
        %14 = call @foo(%13) : void* [all]
        store %14, %11, align 8
        scope {
                %20 = load %11 : void*, align 8
                %21 = const 18446744073709551615 : u64i
                %22 = cast(int_to_ptr) %21 : void*
                cmp
                if %23 {
                        %24 = const 1 : s32i
                        store %24, %10
                        %25 = load %10 : s32i
                        return %25
                }
                yield
        }
        %15 = get_global @global : s32i*
        %16 = load %15 : s32i, align 4
        inc
        store %17, %15, align 4
        %18 = const 0 : s32i
        store %18, %10
        %19 = load %10 : s32i
        return %19
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 1 : s32i
        %3 = get_global @global : s32i*
        store %2, %3, align 4
        scope {
                %6 = call @bar() : s32i [all]
                %7 = const 0 : s32i
                cmp
                if %8 {
                        %9 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
