clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20041113_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20041113-1.c" (c, x86_64-unknown-linux-gnu)
global a : double = CirFloat { ty: Double, value: "4.000000e+01" } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn test(%arg2: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %16 = alloca s32i, "x", align 4
        %17 = alloca rec___va_list_tag[1], "ap", align 16
        %18 = alloca s32i, "i", align 4
        store %arg2, %16
        %19 = cast(array_to_ptrdecay) %17 : rec___va_list_tag*
        va_start
        scope {
                %35 = cast(array_to_ptrdecay) %17 : rec___va_list_tag*
                va_arg
                %37 = const 1 : s32i
                cmp
                if %38 {
                        %39 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %30 = cast(array_to_ptrdecay) %17 : rec___va_list_tag*
                va_arg
                %32 = const 2 : s32i
                cmp
                if %33 {
                        %34 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %25 = cast(array_to_ptrdecay) %17 : rec___va_list_tag*
                va_arg
                %27 = const 3 : s32i
                cmp
                if %28 {
                        %29 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %20 = cast(array_to_ptrdecay) %17 : rec___va_list_tag*
                va_arg
                %22 = const 4 : s32i
                cmp
                if %23 {
                        %24 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        store %arg0, %0
        store %arg1, %1
        %3 = const 0 : s32i
        store %3, %2
        %4 = const 0 : s32i
        %5 = const 1 : s32i
        %6 = const 2 : s32i
        %7 = const 3 : s32i
        %8 = get_global @a : double*
        %9 = load %8 : double, align 8
        %10 = const 1.000000e+01 : double
        fdiv
        %12 = cast(float_to_int) %11 : s32i
        call @test(%4, %5, %6, %7, %12) [all]
        %13 = get_global @exit : (s32i) -> void*
        %14 = const 0 : s32i
        call @exit(%14) [all]
        %15 = load %2 : s32i
        return %15
}
