clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20041114_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20041114-1.c" (c, x86_64-unknown-linux-gnu)
global v : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn link_failure() -> void [external, c, no_inline, dso_local, nothrow] {
        %27 = get_global @abort : () -> void*
        call @abort() [all]
        return
}
fn foo(%arg2: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %8 = alloca s32i, "var", align 4
        store %arg2, %8
        scope {
                %9 = load %8 : s32i, align 4
                %10 = const 0 : s32i
                cmp
                %12 = ternary %11 ? { : bool
                        %26 = const true : bool
                        yield %26
                } : {
                        %14 = load %8 : s32i, align 4
                        %15 = const 1 : s32i
                        sub
                        %17 = cast(integral) %16 : u32i
                        %18 = cast(integral) %17 : u64i
                        %19 = const 2147483647 : u32i
                        %20 = const 2 : u32i
                        mul
                        %22 = const 1 : u32i
                        %23 = add %21, %22 : u32i
                        %24 = cast(integral) %23 : u64i
                        cmp
                        yield %25
                }
                not
                if %13 {
                        call @link_failure() [all]
                        yield
                }
                yield
        }
        return
}
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        store %arg0, %0
        store %arg1, %1
        %3 = const 0 : s32i
        store %3, %2
        %4 = get_global @v : s32i*
        %5 = load %4 : s32i, align 4
        call @foo(%5) [all]
        %6 = const 0 : s32i
        store %6, %2
        %7 = load %2 : s32i
        return %7
}
