clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20041126_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20041126-1.c" (c, x86_64-unknown-linux-gnu)
global __const.main.a : s32i[10] = ConstArray { ty: Array { element_type: Named("s32i"), size: 10 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "3" }, CirInt { ty: Named("s32i"), value: "4" }, CirInt { ty: Named("s32i"), value: "5" }, CirInt { ty: Named("s32i"), value: "6" }, CirInt { ty: Named("s32i"), value: "7" }, CirInt { ty: Named("s32i"), value: "8" }, CirInt { ty: Named("s32i"), value: "9" }, CirInt { ty: Named("s32i"), value: "10" }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn check(%arg0: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %23 = alloca s32i*, "p", align 8
        %24 = alloca s32i, "i", align 4
        store %arg0, %23
        scope {
                %40 = const 0 : s32i
                store %40, %24, align 4
                for cond {
                        %50 = load %24 : s32i, align 4
                        %51 = const 5 : s32i
                        cmp
                        condition %52
                } step {
                        %41 = load %24 : s32i, align 4
                        inc
                        store %42, %24, align 4
                        yield
                } body {
                        scope {
                                %43 = load %24 : s32i, align 4
                                %44 = cast(integral) %43 : s64i
                                %45 = load %23 : s32i*, align 8
                                ptr_stride
                                %47 = load %46 : s32i, align 4
                                %48 = cast(int_to_bool) %47 : bool
                                if %48 {
                                        %49 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                for cond {
                        %37 = load %24 : s32i, align 4
                        %38 = const 10 : s32i
                        cmp
                        condition %39
                } step {
                        %25 = load %24 : s32i, align 4
                        inc
                        store %26, %24, align 4
                        yield
                } body {
                        scope {
                                %27 = load %24 : s32i, align 4
                                %28 = cast(integral) %27 : s64i
                                %29 = load %23 : s32i*, align 8
                                ptr_stride
                                %31 = load %30 : s32i, align 4
                                %32 = load %24 : s32i, align 4
                                %33 = const 1 : s32i
                                %34 = add %32, %33 : s32i [nsw]
                                cmp
                                if %35 {
                                        %36 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[10], "a", align 16
        %2 = alloca s32i, "i", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @__const.main.a : s32i[10]*
        copy
        scope {
                %8 = const -5 : s32i
                store %8, %2, align 4
                for cond {
                        %20 = load %2 : s32i, align 4
                        %21 = const 0 : s32i
                        cmp
                        condition %22
                } step {
                        %9 = load %2 : s32i, align 4
                        inc
                        store %10, %2, align 4
                        yield
                } body {
                        %11 = const 0 : s32i
                        %12 = load %2 : s32i, align 4
                        %13 = const 10 : s32i
                        sub
                        abs
                        %16 = const 11 : s32i
                        sub
                        %18 = cast(integral) %17 : s64i
                        get_element
                        store %11, %19, align 4
                        yield
                }
                yield
        }
        %5 = cast(array_to_ptrdecay) %1 : s32i*
        call @check(%5) [all]
        %6 = const 0 : s32i
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
