clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20041210_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20041210-1.c" (c, x86_64-unknown-linux-gnu)
global x : s32i[4] = ConstArray { ty: Array { element_type: Named("s32i"), size: 4 }, elts: Array([CirInt { ty: Named("s32i"), value: "-1073741824" }, CirInt { ty: Named("s32i"), value: "2147483647" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "4" }]), trailing_zeros_num: 0 } [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = const 0 : s64i
                %6 = get_global @x : s32i[4]*
                get_element
                %8 = load %7 : s32i, align 16
                %9 = const 1 : s64i
                %10 = get_global @x : s32i[4]*
                get_element
                %12 = load %11 : s32i, align 4
                cmp
                if %13 {
                        scope {
                                %14 = const 2 : s64i
                                %15 = get_global @x : s32i[4]*
                                get_element
                                %17 = load %16 : s32i, align 8
                                %18 = const 3 : s64i
                                %19 = get_global @x : s32i[4]*
                                get_element
                                %21 = load %20 : s32i, align 4
                                and
                                %23 = const 0 : s32i
                                cmp
                                if %24 {
                                        %25 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
